<resources>
    <string name="app_name">three_apps</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="usuario">Usuario</string>
    <string name="entrar">Entrar</string>
    <string name="login">Login</string>
    <string name="imc">IMC</string>
    <string name="perfil">Perfil</string>
    <string name="senha">Senha</string>
    <string name="crie_uma_conta_clicando_aqui">Crie uma conta clicando aqui</string>
    <string name="c_lculo_do_imc">Cálculo do IMC</string>
    <string name="calcular">Calcular</string>
    <string name="ronan_fernandes_de_araujo">Ronan Fernandes de Araujo</string>
    <string name="android_developer">Android Developer</string>
    <string name="seu_imc">Seu IMC é:</string>
    <string name="peso_kg">Peso (Kg):</string>
    <string name="altura_cm">Altura (cm):</string>
    <string name="_0">0</string>
    <string name="altura_cm2">Altura(cm)</string>
    <string name="peso_kg2">Peso(kg)</string>
    <string name="resultado">resultado</string>
    <string name="conhecimentos_em_kotlin_e_android_github_dos_meus_projetos">Conhecimentos em Kotlin e Android. Github dos meus projetos:</string>


</resources>