<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_degrade"
    tools:context=".imcFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="300dp"
        android:layout_height="200dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/the_flying_rocket"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"


        />


    <View
        android:id="@+id/viewContainer"
        style="@style/Container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/animation_view"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etUsuario"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/usuario"
        app:layout_constraintEnd_toEndOf="@id/viewContainer"
        app:layout_constraintStart_toStartOf="@id/viewContainer"
        app:layout_constraintTop_toTopOf="@id/viewContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etSenha"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/senha"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@id/viewContainer"
        app:layout_constraintStart_toStartOf="@id/viewContainer"
        app:layout_constraintTop_toBottomOf="@id/etUsuario">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btEntrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="#FFC107"
        android:text="@string/entrar"
        app:layout_constraintEnd_toEndOf="@id/viewContainer"
        app:layout_constraintStart_toStartOf="@id/viewContainer"
        app:layout_constraintTop_toBottomOf="@id/etSenha" />


    <TextView
        android:id="@+id/tvClique"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/crie_uma_conta_clicando_aqui"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btEntrar"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>